# DnDStats

./: .gitignore  Attack.py  Common.py  Damage.py  DamageSum.py  Enemy.py  HitEnums.py  MultiAttack.py  OutcomeRV.py  Outcomes.py  RandomVariable.py  fighter_styles.py  gattling_gun2.py  rage_mage_tests.py  rv_ac_test.py  sequoia_tests.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py
dnd_stats/character_builder/: Cargo.toml
dnd_stats/character_builder/resources/test/: wizard_harry.json
dnd_stats/character_builder/src/: ability_scores.rs  attributed_bonus.rs  basic_attack.rs  char_damage.rs  classes.rs  combat.rs  damage.rs  damage_manager.rs  equipment.rs  feature.rs  lib.rs  resources.rs  serialization.rs  spellcasting.rs  weapon_attack.rs
dnd_stats/character_builder/src/classes/: fighter.rs  ranger.rs  rogue.rs  wizard.rs
dnd_stats/character_builder/src/combat/: attack.rs
dnd_stats/character_builder/src/feature/: feats.rs  fighting_style.rs
dnd_stats/character_builder/src/spellcasting/: cantrips.rs  fourth_lvl_spells.rs  third_lvl_spells.rs
dnd_stats/combat_sim/: Cargo.toml
dnd_stats/combat_sim/src/: combat_log.rs  combat_result_rv.rs  combat_state_rv.rs  encounter_simulator.rs  lib.rs  main.rs  monster.rs  participant.rs  player.rs  prob_combat_state.rs  serialization.rs  strategy.rs  target_dummy.rs  transposition.rs
dnd_stats/combat_sim/src/combat_result_rv/: prob_combat_result.rs
dnd_stats/combat_sim/src/combat_state_rv/: prob_combat_state.rs
dnd_stats/combat_sim/src/prob_combat_state/: combat_state.rs
(+75 files in other folders)
