[package]
name = "combat_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.6", features = ["derive"] }
rand_var = { path = "../rand_var" }
character_builder = { path = "../character_builder" }
combat_core = { path = "../combat_core" }
